--- a/views/users/edit.pug
+++ b/views/users/edit.pug
@@ -3,6 +3,9 @@ extends ../layout
 block content
   h1= title
 
+  button 
+    a(href="/users") Retour
+
   p Editer l'utilisateur :
 
   form(action=action method='post')
