--- a/views/users/show.pug
+++ b/views/users/show.pug
@@ -3,6 +3,9 @@ extends ../layout
 block content
   h1= title
 
+  button 
+    a(href="/users") Retour
+
   p Voici l'utilisateur :
 
   table(border=1)
